--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commons\Erorrs\" />
+  </ItemGroup>
+
 </Project>
