feat(user-profile): enhance user profile management
Significantly updated UserProfile with new properties, constructors, and methods for validation and error handling. Added various DomainErrors for account, email, password, addresses, authentication, fashion preferences, and user profiles. Introduced events for user profile changes and improved structure for TodoItem and TodoList management. Added value objects for FashionPreferences and Colour, along with new entities for Country and State.

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,7 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commons\Erorrs\" />
+    <None Include="Todo\Errors\DomainErrors.TodoList..cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" />
   </ItemGroup>
 
 </Project>
