--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -35,12 +35,14 @@
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="Net4x.FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageVersion Include="NSubstitute" Version="5.3.0" />
     <PackageVersion Include="Pgvector" Version="0.3.1" />
     <PackageVersion Include="Pgvector.EntityFrameworkCore" Version="0.2.2" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.2.3" />
     <PackageVersion Include="Serilog" Version="4.2.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Debug" Version="3.0.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageVersion Include="Shouldly" Version="4.3.0" />
     <PackageVersion Include="starkbank-ecdsa" Version="1.3.3" />
