--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -32,6 +32,7 @@
     <InternalsVisibleTo Include="RuanFa.Shop.Application.UnitTests" />
     <InternalsVisibleTo Include="RuanFa.Shop.Infrastructure.UnitTests" />
     <InternalsVisibleTo Include="RuanFa.Shop.Application.SubcutaneousTests" />
+    <InternalsVisibleTo Include="RuanFa.Shop.Tests.Shared" />
   </ItemGroup>
 
 </Project>
