feat(catalogs): init catalog management

--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -35,4 +35,8 @@
     <InternalsVisibleTo Include="RuanFa.Shop.Tests.Shared" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
