--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLLocalDBDefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Quingfa.Eshop;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MSSQLLocalDBDefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Ruanfa.Eshop;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqliteConnection": "Data Source=database.sqlite",
-    "PostgresConnection": "Server=localhost;Database=quingfa.eshop;Username=postgres;Password=123456789"
+    "PostgresConnection": "Server=localhost;Database=ruanfa.eshop;Username=postgres;Password=123456789"
   },
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
